--- a/3dGame/3dGame.vcxproj
+++ b/3dGame/3dGame.vcxproj
@@ -147,6 +147,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="Actor\Effect\FireSphere.cpp" />
     <ClCompile Include="Actor\Actor.cpp" />
     <ClCompile Include="Actor\ActorManager.cpp" />
     <ClCompile Include="Actor\AnimatedMesh.cpp" />
@@ -156,17 +157,28 @@
     <ClCompile Include="Collision\BoundingSphere.cpp" />
     <ClCompile Include="Collision\Field.cpp" />
     <ClCompile Include="Actor\Light.cpp" />
+    <ClCompile Include="Actor\Enemy\Enemy.cpp" />
+    <ClCompile Include="Actor\Enemy\Dragon.cpp" />
+    <ClCompile Include="UI\HP.cpp" />
     <ClCompile Include="Input.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="Scene\GamePlayScene.cpp" />
     <ClCompile Include="Scene\SceneManager.cpp" />
+    <ClCompile Include="UI\ST.cpp" />
+    <ClCompile Include="Tween\Tween.cpp" />
+    <ClCompile Include="Tween\TweenUnit.cpp" />
+    <ClCompile Include="Tween\ValueUnit.cpp" />
     <ClCompile Include="World\World.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="Actor\Effect\FireSphere.h" />
     <ClInclude Include="Actor\Actor.h" />
     <ClInclude Include="Actor\ActorManager.h" />
     <ClInclude Include="Actor\AnimatedMesh.h" />
     <ClInclude Include="Actor\AttackCollider.h" />
+    <ClInclude Include="Actor\Enemy\Enemy.h" />
+    <ClInclude Include="Actor\Enemy\Dragon.h" />
+    <ClInclude Include="UI\HP.h" />
     <ClInclude Include="Input.h" />
     <ClInclude Include="Actor\Player\Player.h" />
     <ClInclude Include="Camera\CameraTPS.h" />
@@ -175,6 +187,10 @@
     <ClInclude Include="Asset.h" />
     <ClInclude Include="Scene\IScene.h" />
     <ClInclude Include="Scene\GamePlayScene.h" />
+    <ClInclude Include="UI\ST.h" />
+    <ClInclude Include="Tween\Tween.h" />
+    <ClInclude Include="Tween\TweenUnit.h" />
+    <ClInclude Include="Tween\ValueUnit.h" />
     <ClInclude Include="World\IWorld.h" />
     <ClInclude Include="Actor\Light.h" />
     <ClInclude Include="Collision\Line.h" />
