--- a/3dGame/3dGame.vcxproj
+++ b/3dGame/3dGame.vcxproj
@@ -159,7 +159,9 @@
     <ClCompile Include="Actor\Light.cpp" />
     <ClCompile Include="Actor\Enemy\Enemy.cpp" />
     <ClCompile Include="Actor\Enemy\Dragon.cpp" />
+    <ClCompile Include="Actor\Effect\Explosion.cpp" />
     <ClCompile Include="Scene\TitleScene.cpp" />
+    <ClCompile Include="Actor\Enemy\Skeleton.cpp" />
     <ClCompile Include="UI\HP.cpp" />
     <ClCompile Include="Input.cpp" />
     <ClCompile Include="main.cpp" />
@@ -168,7 +170,9 @@
     <ClCompile Include="UI\ST.cpp" />
     <ClCompile Include="Tween\Tween.cpp" />
     <ClCompile Include="Tween\TweenUnit.cpp" />
+    <ClCompile Include="Actor\Enemy\Witch.cpp" />
     <ClCompile Include="Tween\ValueUnit.cpp" />
+    <ClCompile Include="Tween\Vector3Unit.cpp" />
     <ClCompile Include="World\World.cpp" />
   </ItemGroup>
   <ItemGroup>
@@ -179,20 +183,24 @@
     <ClInclude Include="Actor\AttackCollider.h" />
     <ClInclude Include="Actor\Enemy\Enemy.h" />
     <ClInclude Include="Actor\Enemy\Dragon.h" />
+    <ClInclude Include="Actor\Effect\Explosion.h" />
     <ClInclude Include="Scene\TitleScene.h" />
+    <ClInclude Include="Actor\Enemy\Skeleton.h" />
     <ClInclude Include="UI\HP.h" />
     <ClInclude Include="Input.h" />
     <ClInclude Include="Actor\Player\Player.h" />
     <ClInclude Include="Camera\CameraTPS.h" />
     <ClInclude Include="Collision\BoundingSphere.h" />
     <ClInclude Include="Collision\Field.h" />
-    <ClInclude Include="Asset.h" />
+    <ClInclude Include="Assets.h" />
     <ClInclude Include="Scene\IScene.h" />
     <ClInclude Include="Scene\GamePlayScene.h" />
     <ClInclude Include="UI\ST.h" />
     <ClInclude Include="Tween\Tween.h" />
     <ClInclude Include="Tween\TweenUnit.h" />
+    <ClInclude Include="Actor\Enemy\Witch.h" />
     <ClInclude Include="Tween\ValueUnit.h" />
+    <ClInclude Include="Tween\Vector3Unit.h" />
     <ClInclude Include="World\IWorld.h" />
     <ClInclude Include="Actor\Light.h" />
     <ClInclude Include="Collision\Line.h" />
