--- a/3dGame/3dGame.vcxproj
+++ b/3dGame/3dGame.vcxproj
@@ -72,13 +72,13 @@
   <PropertyGroup Label="UserMacros" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <LinkIncremental>true</LinkIncremental>
-    <IncludePath>C:\gslib_2021\inc;$(IncludePath)</IncludePath>
-    <LibraryPath>C:\gslib_2021\lib;$(LibraryPath)</LibraryPath>
+    <IncludePath>C:\gslib_2021\inc;C:\gseffect_2021\inc;$(IncludePath)</IncludePath>
+    <LibraryPath>C:\gslib_2021\lib;C:\gseffect_2021\lib;$(LibraryPath)</LibraryPath>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
     <LinkIncremental>false</LinkIncremental>
-    <IncludePath>C:\gslib_2021\inc;$(IncludePath)</IncludePath>
-    <LibraryPath>C:\gslib_2021\lib;$(LibraryPath)</LibraryPath>
+    <IncludePath>C:\gslib_2021\inc;C:\gseffect_2021\inc;$(IncludePath)</IncludePath>
+    <LibraryPath>C:\gslib_2021\lib;C:\gseffect_2021\lib;$(LibraryPath)</LibraryPath>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
     <LinkIncremental>true</LinkIncremental>
@@ -164,9 +164,11 @@
     <ClCompile Include="Actor\Effect\Explosion.cpp" />
     <ClCompile Include="CSVReader.cpp" />
     <ClCompile Include="EnemyGenerator.cpp" />
+    <ClCompile Include="Fog.cpp" />
     <ClCompile Include="Scene\LoadingScene.cpp" />
     <ClCompile Include="Scene\TitleScene.cpp" />
     <ClCompile Include="Actor\Enemy\Skeleton.cpp" />
+    <ClCompile Include="Tween\Vector2Unit.cpp" />
     <ClCompile Include="UI\HP.cpp" />
     <ClCompile Include="Input.cpp" />
     <ClCompile Include="main.cpp" />
@@ -191,9 +193,11 @@
     <ClInclude Include="Actor\Effect\Explosion.h" />
     <ClInclude Include="CSVReader.h" />
     <ClInclude Include="EnemyGenerator.h" />
+    <ClInclude Include="Fog.h" />
     <ClInclude Include="Scene\LoadingScene.h" />
     <ClInclude Include="Scene\TitleScene.h" />
     <ClInclude Include="Actor\Enemy\Skeleton.h" />
+    <ClInclude Include="Tween\Vector2Unit.h" />
     <ClInclude Include="UI\HP.h" />
     <ClInclude Include="Input.h" />
     <ClInclude Include="Actor\Player\Player.h" />
