--- a/3dGame/imgui.ini
+++ b/3dGame/imgui.ini
@@ -3,3 +3,18 @@ Pos=60,60
 Size=400,400
 Collapsed=0
 
+[Window][Lighting]
+Pos=71,181
+Size=453,267
+Collapsed=1
+
+[Window][Fog]
+Pos=78,148
+Size=328,188
+Collapsed=1
+
+[Window][Player_SE]
+Pos=-81,357
+Size=298,53
+Collapsed=0
+
