--- a/3dGame/3dGame.vcxproj
+++ b/3dGame/3dGame.vcxproj
@@ -74,11 +74,13 @@
     <LinkIncremental>true</LinkIncremental>
     <IncludePath>C:\gslib_2021\inc;C:\gseffect_2021\inc;$(IncludePath)</IncludePath>
     <LibraryPath>C:\gslib_2021\lib;C:\gseffect_2021\lib;$(LibraryPath)</LibraryPath>
+    <TargetName>DragonSlayer</TargetName>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
     <LinkIncremental>false</LinkIncremental>
     <IncludePath>C:\gslib_2021\inc;C:\gseffect_2021\inc;$(IncludePath)</IncludePath>
     <LibraryPath>C:\gslib_2021\lib;C:\gseffect_2021\lib;$(LibraryPath)</LibraryPath>
+    <TargetName>DragonSlayer</TargetName>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
     <LinkIncremental>true</LinkIncremental>
@@ -161,9 +163,9 @@
     <ClCompile Include="Actor\Light.cpp" />
     <ClCompile Include="Actor\Enemy\Enemy.cpp" />
     <ClCompile Include="Actor\Enemy\Dragon.cpp" />
-    <ClCompile Include="CSVReader.cpp" />
-    <ClCompile Include="EnemyGenerator.cpp" />
-    <ClCompile Include="Fog.cpp" />
+    <ClCompile Include="EnemyGenerator\CSVReader.cpp" />
+    <ClCompile Include="EnemyGenerator\EnemyGenerator.cpp" />
+    <ClCompile Include="Fog\Fog.cpp" />
     <ClCompile Include="Scene\LoadingScene.cpp" />
     <ClCompile Include="Scene\TitleScene.cpp" />
     <ClCompile Include="Actor\Enemy\Skeleton.cpp" />
@@ -189,9 +191,9 @@
     <ClInclude Include="Actor\AttackCollider.h" />
     <ClInclude Include="Actor\Enemy\Enemy.h" />
     <ClInclude Include="Actor\Enemy\Dragon.h" />
-    <ClInclude Include="CSVReader.h" />
-    <ClInclude Include="EnemyGenerator.h" />
-    <ClInclude Include="Fog.h" />
+    <ClInclude Include="EnemyGenerator\CSVReader.h" />
+    <ClInclude Include="EnemyGenerator\EnemyGenerator.h" />
+    <ClInclude Include="Fog\Fog.h" />
     <ClInclude Include="Scene\LoadingScene.h" />
     <ClInclude Include="Scene\TitleScene.h" />
     <ClInclude Include="Actor\Enemy\Skeleton.h" />
