--- a/3dGame/3dGame.vcxproj
+++ b/3dGame/3dGame.vcxproj
@@ -72,28 +72,28 @@
   <PropertyGroup Label="UserMacros" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <LinkIncremental>true</LinkIncremental>
-    <IncludePath>C:\gslib_2021\inc;C:\gseffect_2021\inc</IncludePath>
-    <LibraryPath>C:\gslib_2021\lib;C:\gseffect_2021\lib</LibraryPath>
+    <IncludePath>C:\gslib_2021\inc;C:\gseffect_2021\inc;$(IncludePath)</IncludePath>
+    <LibraryPath>C:\gslib_2021\lib;C:\gseffect_2021\lib;$(LibraryPath)</LibraryPath>
     <TargetName>DragonSlayer</TargetName>
     <CodeAnalysisRuleSet>AllRules.ruleset</CodeAnalysisRuleSet>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
     <LinkIncremental>false</LinkIncremental>
-    <IncludePath>C:\gslib_2021\inc;C:\gseffect_2021\inc</IncludePath>
-    <LibraryPath>C:\gslib_2021\lib;C:\gseffect_2021\lib</LibraryPath>
+    <IncludePath>C:\gslib_2021\inc;C:\gseffect_2021\inc;$(IncludePath)</IncludePath>
+    <LibraryPath>C:\gslib_2021\lib;C:\gseffect_2021\lib;$(LibraryPath)</LibraryPath>
     <TargetName>DragonSlayer</TargetName>
     <CodeAnalysisRuleSet>AllRules.ruleset</CodeAnalysisRuleSet>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
     <LinkIncremental>true</LinkIncremental>
-    <IncludePath>C:\gslib_2021\inc;C:\gseffect_2021\inc</IncludePath>
-    <LibraryPath>C:\gslib_2021\lib;C:\gseffect_2021\lib</LibraryPath>
+    <IncludePath>C:\gslib_2021\inc;C:\gseffect_2021\inc;$(IncludePath)</IncludePath>
+    <LibraryPath>C:\gslib_2021\lib;C:\gseffect_2021\lib;$(LibraryPath)</LibraryPath>
     <CodeAnalysisRuleSet>AllRules.ruleset</CodeAnalysisRuleSet>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
     <LinkIncremental>false</LinkIncremental>
-    <IncludePath>C:\gslib_2021\inc;C:\gseffect_2021\inc</IncludePath>
-    <LibraryPath>C:\gslib_2021\lib;C:\gseffect_2021\lib</LibraryPath>
+    <IncludePath>C:\gslib_2021\inc;C:\gseffect_2021\inc;$(IncludePath)</IncludePath>
+    <LibraryPath>C:\gslib_2021\lib;C:\gseffect_2021\lib;$(LibraryPath)</LibraryPath>
     <CodeAnalysisRuleSet>AllRules.ruleset</CodeAnalysisRuleSet>
   </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
