--- a/3dGame/3dGame.vcxproj
+++ b/3dGame/3dGame.vcxproj
@@ -174,6 +174,7 @@
     <ClCompile Include="EnemyGenerator\CSVReader.cpp" />
     <ClCompile Include="EnemyGenerator\EnemyGenerator.cpp" />
     <ClCompile Include="Fog\Fog.cpp" />
+    <ClCompile Include="HitStop.cpp" />
     <ClCompile Include="Scene\LoadingScene.cpp" />
     <ClCompile Include="Scene\TitleScene.cpp" />
     <ClCompile Include="Actor\Enemy\Skeleton.cpp" />
@@ -208,6 +209,7 @@
     <ClInclude Include="EnemyGenerator\CSVReader.h" />
     <ClInclude Include="EnemyGenerator\EnemyGenerator.h" />
     <ClInclude Include="Fog\Fog.h" />
+    <ClInclude Include="HitStop.h" />
     <ClInclude Include="Scene\LoadingScene.h" />
     <ClInclude Include="Scene\TitleScene.h" />
     <ClInclude Include="Actor\Enemy\Skeleton.h" />
@@ -244,6 +246,7 @@
   <ItemGroup>
     <None Include="Assets\StageData\FasePos.csv" />
     <None Include="Assets\StageData\StatgeData.csv" />
+    <None Include="ClassDiagram1.cd" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
